[package]
name = "image-gz"
version = "0.1.0"
authors = ["leviegu <leviegu@gmail.com>"]
description = "image compression by rust"
repository = "https://github.com/leviegu/image-gz"
license = 'MIT'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"