[package]
name = "image-gz"
version = "0.0.1"
authors = ["seeintea <gu.lw@foxmail.com>"]
description = "image compression by rust"
repository = "https://github.com/seeintea/image-gz"
license = 'MIT'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
image_tool = { version = "0.0.1", path = "../image_tool" }