[package]
name = "image_wasm"
version = "0.0.1"
authors = ["seeintea <gu.lw@foxmail.com>"]
description = "image resize and compression by rust"
repository = "https://github.com/seeintea/image-rc"
license = 'MIT'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
image_rc = { version = "0.1.0", path = "../image_rc" }