[package]
name = "image_wasm"
version = "0.0.1"
authors = ["seeintea <gu.lw@foxmail.com>"]
description = "image resize and compression by rust"
repository = "https://github.com/seeintea/image-rc"
license = 'MIT'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ['console_error_panic_hook']

[dependencies]
wasm-bindgen = "0.2.92"
image_rc = { version = "0.1.0", path = "../image_rc" }
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"